--- a/Results_Modalities_2D.ipynb
+++ b/Results_Modalities_2D.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "b614cdaf",
    "metadata": {},
    "outputs": [],
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "f501a470",
    "metadata": {},
    "outputs": [
@@ -355,7 +355,7 @@
        "35             0.47053   0.806074  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +363,7 @@
    "source": [
     "df5 = pd.read_csv('Logs/testing/2D_U_net_4ch.log')\n",
     "df5 = df5[['dice_coef', 'dice_coef_edema', 'dice_coef_enhancing', 'dice_coef_necrotic', 'mean_io_u']]\n",
-    "df5 = pd.DataFrame(df5.mean().to_dict(),index=[df.index.values[-1]])\n",
+    "df5 = pd.DataFrame(df5.mean().to_dict(),index=[df5.index.values[-1]])\n",
     "df5.insert(loc=0, column='Modalities', value='flair, T1ce, T1, T2')\n",
     "df5"
    ]
@@ -968,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "id": "875846f2",
    "metadata": {},
    "outputs": [
@@ -980,16 +980,7 @@
       "\\toprule\n",
       "         Modalities &  dice\\_coef &  dice\\_coef\\_edema &  dice\\_coef\\_enhancing &  dice\\_coef\\_necrotic &  mean\\_io\\_u \\\\\n",
       "\\midrule\n",
-      "    flair, T1ce, T2 &     0.6522 &           0.7912 &               0.7536 &              0.5811 &     0.7805 \\\\\n",
-      "    flair, T1ce, T1 &     0.6353 &           0.7472 &               0.7643 &              0.5764 &     0.6033 \\\\\n",
-      "       T1ce, T1, T2 &     0.5735 &           0.6788 &               0.6718 &              0.4645 &     0.6675 \\\\\n",
       "flair, T1ce, T1, T2 &     0.5618 &           0.6963 &               0.6217 &              0.4705 &     0.8061 \\\\\n",
-      "      flair, T1, T2 &     0.4702 &           0.6923 &               0.3446 &              0.2805 &     0.7865 \\\\\n",
-      "    flair, T1ce, T2 &     0.5884 &           0.7153 &               0.6438 &              0.4842 &     0.7850 \\\\\n",
-      "    flair, T1ce, T1 &     0.5529 &           0.6328 &               0.5818 &              0.4517 &     0.5930 \\\\\n",
-      "       T1ce, T1, T2 &     0.5512 &           0.6536 &               0.6187 &              0.4256 &     0.6666 \\\\\n",
-      "flair, T1ce, T1, T2 &     0.5403 &           0.7063 &               0.6250 &              0.3444 &     0.8096 \\\\\n",
-      "      flair, T1, T2 &     0.4513 &           0.6389 &               0.3352 &              0.2739 &     0.7783 \\\\\n",
       "\\bottomrule\n",
       "\\end{tabular}\n",
       "\n"
@@ -999,14 +990,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\VegardEikenes\\AppData\\Local\\Temp\\ipykernel_16576\\3326558337.py:2: FutureWarning: In future versions `DataFrame.to_latex` is expected to utilise the base implementation of `Styler.to_latex` for formatting and rendering. The arguments signature may therefore change. It is recommended instead to use `DataFrame.style.to_latex` which also contains additional functionality.\n",
-      "  print(concated.round(decimals=4).to_latex(index=False))\n"
+      "C:\\Users\\VegardEikenes\\AppData\\Local\\Temp\\ipykernel_22592\\3175879319.py:2: FutureWarning: In future versions `DataFrame.to_latex` is expected to utilise the base implementation of `Styler.to_latex` for formatting and rendering. The arguments signature may therefore change. It is recommended instead to use `DataFrame.style.to_latex` which also contains additional functionality.\n",
+      "  print(df5.round(decimals=4).to_latex(index=False))\n"
      ]
     }
    ],
    "source": [
-    "concated = pd.concat([test_df, valid_df])\n",
-    "print(concated.round(decimals=4).to_latex(index=False))"
+    "# concated = pd.concat([test_df, valid_df])\n",
+    "print(df5.round(decimals=4).to_latex(index=False))"
    ]
   },
   {
@@ -1034,7 +1025,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
