--- a/Results_Modalities_3D.ipynb
+++ b/Results_Modalities_3D.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "b614cdaf",
    "metadata": {},
    "outputs": [],
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "f501a470",
    "metadata": {},
    "outputs": [
@@ -355,7 +355,7 @@
        "35             0.22285   0.536419  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +364,7 @@
     "df5 = pd.read_csv('Logs/testing/3D_U_net_4ch.log')\n",
     "df5 = df5[['dice_coef', 'dice_coef_edema', 'dice_coef_enhancing', 'dice_coef_necrotic', 'mean_io_u_1']]\n",
     "df5 = df5.rename(columns={'mean_io_u_1': 'mean_io_u'})\n",
-    "df5 = pd.DataFrame(df5.mean().to_dict(),index=[df.index.values[-1]])\n",
+    "df5 = pd.DataFrame(df5.mean().to_dict(),index=[df5.index.values[-1]])\n",
     "df5.insert(loc=0, column='Modalities', value='flair, T1ce, T1, T2')\n",
     "df5"
    ]
@@ -1005,13 +1005,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "875846f2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\begin{tabular}{lrrrrr}\n",
+      "\\toprule\n",
+      "         Modalities &  dice\\_coef &  dice\\_coef\\_edema &  dice\\_coef\\_enhancing &  dice\\_coef\\_necrotic &  mean\\_io\\_u \\\\\n",
+      "\\midrule\n",
+      "flair, T1ce, T1, T2 &     0.4641 &           0.7044 &               0.2896 &              0.2228 &     0.5364 \\\\\n",
+      "\\bottomrule\n",
+      "\\end{tabular}\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\VegardEikenes\\AppData\\Local\\Temp\\ipykernel_24408\\836816279.py:2: FutureWarning: In future versions `DataFrame.to_latex` is expected to utilise the base implementation of `Styler.to_latex` for formatting and rendering. The arguments signature may therefore change. It is recommended instead to use `DataFrame.style.to_latex` which also contains additional functionality.\n",
+      "  print(df5.round(decimals=4).to_latex(index=False))\n"
+     ]
+    }
+   ],
    "source": [
-    "concated = pd.concat([test_df, valid_df])\n",
-    "print(concated.round(decimals=4).to_latex(index=False))"
+    "#concated = pd.concat([test_df, valid_df])\n",
+    "print(df5.round(decimals=4).to_latex(index=False))"
    ]
   },
   {
@@ -1039,7 +1062,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
