--- a/Results_resunet_attunet_resattunet.ipynb
+++ b/Results_resunet_attunet_resattunet.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "059e8582",
    "metadata": {},
    "outputs": [
@@ -119,11 +119,11 @@
        "    <tr>\n",
        "      <th>35</th>\n",
        "      <td>Attention U-Net</td>\n",
-       "      <td>0.335724</td>\n",
-       "      <td>0.300641</td>\n",
-       "      <td>0.191168</td>\n",
-       "      <td>0.157059</td>\n",
-       "      <td>0.809451</td>\n",
+       "      <td>0.487058</td>\n",
+       "      <td>0.500973</td>\n",
+       "      <td>0.601147</td>\n",
+       "      <td>0.330424</td>\n",
+       "      <td>0.798684</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -131,13 +131,13 @@
       ],
       "text/plain": [
        "       Architecture  dice_coef  dice_coef_edema  dice_coef_enhancing  \\\n",
-       "35  Attention U-Net   0.335724         0.300641             0.191168   \n",
+       "35  Attention U-Net   0.487058         0.500973             0.601147   \n",
        "\n",
        "    dice_coef_necrotic  mean_io_u  \n",
-       "35            0.157059   0.809451  "
+       "35            0.330424   0.798684  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,14 +145,14 @@
    "source": [
     "df2 = pd.read_csv('Logs/testing/attU_net_2d.log')\n",
     "df2 = df2[['dice_coef', 'dice_coef_edema', 'dice_coef_enhancing', 'dice_coef_necrotic', 'mean_io_u']]\n",
-    "df2 = pd.DataFrame(df2.mean().to_dict(),index=[df.index.values[-1]])\n",
+    "df2 = pd.DataFrame(df2.mean().to_dict(),index=[df2.index.values[-1]])\n",
     "df2.insert(loc=0, column='Architecture', value='Attention U-Net')\n",
     "df2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "2c25a1c7",
    "metadata": {},
    "outputs": [
@@ -189,11 +189,11 @@
        "    <tr>\n",
        "      <th>35</th>\n",
        "      <td>Residual Attention U-Net</td>\n",
-       "      <td>0.408476</td>\n",
-       "      <td>0.360074</td>\n",
-       "      <td>0.362405</td>\n",
-       "      <td>0.196959</td>\n",
-       "      <td>0.789009</td>\n",
+       "      <td>0.47295</td>\n",
+       "      <td>0.477172</td>\n",
+       "      <td>0.463444</td>\n",
+       "      <td>0.296294</td>\n",
+       "      <td>0.799127</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -201,13 +201,13 @@
       ],
       "text/plain": [
        "                Architecture  dice_coef  dice_coef_edema  dice_coef_enhancing  \\\n",
-       "35  Residual Attention U-Net   0.408476         0.360074             0.362405   \n",
+       "35  Residual Attention U-Net    0.47295         0.477172             0.463444   \n",
        "\n",
        "    dice_coef_necrotic  mean_io_u  \n",
-       "35            0.196959   0.789009  "
+       "35            0.296294   0.799127  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +215,7 @@
    "source": [
     "df3 = pd.read_csv('Logs/testing/resattU_net_2d.log')\n",
     "df3 = df3[['dice_coef', 'dice_coef_edema', 'dice_coef_enhancing', 'dice_coef_necrotic', 'mean_io_u']]\n",
-    "df3 = pd.DataFrame(df3.mean().to_dict(),index=[df.index.values[-1]])\n",
+    "df3 = pd.DataFrame(df3.mean().to_dict(),index=[df3.index.values[-1]])\n",
     "df3.insert(loc=0, column='Architecture', value='Residual Attention U-Net')\n",
     "df3"
    ]
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "6d3cb400",
    "metadata": {},
    "outputs": [
@@ -267,7 +267,7 @@
       "\\toprule\n",
       "   Architecture &  dice\\_coef &  dice\\_coef\\_edema &  dice\\_coef\\_enhancing &  dice\\_coef\\_necrotic &  mean\\_io\\_u \\\\\n",
       "\\midrule\n",
-      "Attention U-Net &     0.3357 &           0.3006 &               0.1912 &              0.1571 &     0.8095 \\\\\n",
+      "Attention U-Net &     0.4871 &            0.501 &               0.6011 &              0.3304 &     0.7987 \\\\\n",
       "\\bottomrule\n",
       "\\end{tabular}\n",
       "\n"
@@ -277,7 +277,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\VegardEikenes\\AppData\\Local\\Temp\\ipykernel_15404\\186664166.py:1: FutureWarning: In future versions `DataFrame.to_latex` is expected to utilise the base implementation of `Styler.to_latex` for formatting and rendering. The arguments signature may therefore change. It is recommended instead to use `DataFrame.style.to_latex` which also contains additional functionality.\n",
+      "C:\\Users\\VegardEikenes\\AppData\\Local\\Temp\\ipykernel_1556\\186664166.py:1: FutureWarning: In future versions `DataFrame.to_latex` is expected to utilise the base implementation of `Styler.to_latex` for formatting and rendering. The arguments signature may therefore change. It is recommended instead to use `DataFrame.style.to_latex` which also contains additional functionality.\n",
       "  print(df2.round(decimals=4).to_latex(index=False))\n"
      ]
     }
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "cf5f6c5c",
    "metadata": {},
    "outputs": [
@@ -300,7 +300,7 @@
       "\\toprule\n",
       "            Architecture &  dice\\_coef &  dice\\_coef\\_edema &  dice\\_coef\\_enhancing &  dice\\_coef\\_necrotic &  mean\\_io\\_u \\\\\n",
       "\\midrule\n",
-      "Residual Attention U-Net &     0.4085 &           0.3601 &               0.3624 &               0.197 &      0.789 \\\\\n",
+      "Residual Attention U-Net &     0.4729 &           0.4772 &               0.4634 &              0.2963 &     0.7991 \\\\\n",
       "\\bottomrule\n",
       "\\end{tabular}\n",
       "\n"
@@ -310,7 +310,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\VegardEikenes\\AppData\\Local\\Temp\\ipykernel_10072\\1440984.py:1: FutureWarning: In future versions `DataFrame.to_latex` is expected to utilise the base implementation of `Styler.to_latex` for formatting and rendering. The arguments signature may therefore change. It is recommended instead to use `DataFrame.style.to_latex` which also contains additional functionality.\n",
+      "C:\\Users\\VegardEikenes\\AppData\\Local\\Temp\\ipykernel_1556\\1440984.py:1: FutureWarning: In future versions `DataFrame.to_latex` is expected to utilise the base implementation of `Styler.to_latex` for formatting and rendering. The arguments signature may therefore change. It is recommended instead to use `DataFrame.style.to_latex` which also contains additional functionality.\n",
       "  print(df3.round(decimals=4).to_latex(index=False))\n"
      ]
     }
